tests/parsing/smtlib/mcil/errors/284_define-system_bad_attribute_7.mcil
(define-system sys :inv t _)